unpackaged/objects/ExternalAPIs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>External APIs</label>
</CustomObject>